Teste and repairs